--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -49,7 +49,7 @@
 </ion-card-content>
 <ion-row>
   <button ion-button color="primary" (click)="navigateToPage('RegisterPage')" >register</button>
-  <button ion-button color="secondary" [disabled]="!login.valid"(click)="navigateToPage('InboxPage')" >login</button>
+  <button ion-button color="secondary" [disabled]="!login.valid"(click)="navigateToPage('TabsPage')" >login</button>
 
 </ion-row>
 </ion-card>
