--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>inbox</ion-title>
   </ion-navbar>
 
@@ -14,5 +14,30 @@
 
 
 <ion-content padding>
+
+  <ion-list>
+
+    <ion-item>
+      <ion-avatar item-left>
+        <img src='../../assets/imgs/avatar.png' alt="avatar">
+      </ion-avatar>
+      <h2> motassem</h2>
+      <p> new lesson added</p>
+    </ion-item>
+    <ion-item>
+        <ion-avatar item-left>
+          <img src='../../assets/imgs/avatar.png' alt="avatar">
+        </ion-avatar>
+        <h2> motassem</h2>
+        <p> new lesson added</p>
+      </ion-item>
+      <ion-item>
+          <ion-avatar item-left>
+            <img src='../../assets/imgs/avatar.png' alt="avatar">
+          </ion-avatar>
+          <h2> motassem</h2>
+          <p> new lesson added</p>
+        </ion-item>
+  </ion-list>
 
 </ion-content>
