--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -17,27 +17,14 @@
 
   <ion-list>
 
-    <ion-item>
+    <ion-item *ngFor="let message of messags">
       <ion-avatar item-left>
         <img src='../../assets/imgs/avatar.png' alt="avatar">
       </ion-avatar>
-      <h2> motassem</h2>
-      <p> new lesson added</p>
+      <h2>{{message.user.firstname}} </h2>
+      <p> {{message.lastMessage}}</p>
     </ion-item>
-    <ion-item>
-        <ion-avatar item-left>
-          <img src='../../assets/imgs/avatar.png' alt="avatar">
-        </ion-avatar>
-        <h2> motassem</h2>
-        <p> new lesson added</p>
-      </ion-item>
-      <ion-item>
-          <ion-avatar item-left>
-            <img src='../../assets/imgs/avatar.png' alt="avatar">
-          </ion-avatar>
-          <h2> motassem</h2>
-          <p> new lesson added</p>
-        </ion-item>
+    
   </ion-list>
 
 </ion-content>
