--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -6,7 +6,7 @@
 -->
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>register</ion-title>
   </ion-navbar>
 
@@ -14,5 +14,5 @@
 
 
 <ion-content padding>
-
+  <app-register-form></app-register-form>
 </ion-content>
