--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,5 +14,5 @@
 
 
 <ion-content padding >
-    <app-login-form></app-login-form>
+    <app-login-form (loginstatus)="login($event)"></app-login-form>
 </ion-content>
