--- a/src/pages/editprofile/editprofile.html
+++ b/src/pages/editprofile/editprofile.html
@@ -1,18 +1,18 @@
 <!--
-  Generated template for the RegisterPage page.
+  Generated template for the EditprofilePage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
 <ion-header>
 
-  <ion-navbar color="primary">
-    <ion-title>register</ion-title>
+  <ion-navbar>
+    <ion-title>editprofile</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  <app-register-form (regStatus)="registerstatus($event)"></app-register-form>
+
 </ion-content>
