--- a/src/pages/editprofile/editprofile.html
+++ b/src/pages/editprofile/editprofile.html
@@ -15,6 +15,6 @@
 
 <ion-content padding>
 
-    <app-editprofile></app-editprofile>
+    <app-editprofile (isProfilesaved)="profilesave($event)"></app-editprofile>
 
 </ion-content>
