add channels and get it as observable

--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -10,6 +10,11 @@
     <ion-title (click)="navigate()">inbox page</ion-title>
 
     <ion-buttons end>
+
+        <button ion-button icon-only (click)="logout()">  
+            <ion-icon name="log-out"></ion-icon>
+      </button>
+
       <button ion-button icon-only (click)="navigate()">  
             <ion-icon name="add"></ion-icon>
       </button>
