--- a/src/pages/chanels/chanels.html
+++ b/src/pages/chanels/chanels.html
@@ -8,11 +8,27 @@
 
   <ion-navbar>
     <ion-title>chanels</ion-title>
+
+    <ion-buttons end>
+
+      <button ion-button icon-only (click)="showalertdialog()">  
+            <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <ion-list>
+    <ion-item  *ngFor="let ch of channellist | async">
+
+      {{ch?.name}}
+
+
+    </ion-item>
+  </ion-list>
 
 </ion-content>
