--- a/src/pages/inbox/inbox.html
+++ b/src/pages/inbox/inbox.html
@@ -26,6 +26,8 @@
 
 <ion-content padding>
 
+    <app-onlineusers></app-onlineusers>
+<!--
   <ion-list>
 
     <ion-item *ngFor="let message of messags">
@@ -37,5 +39,6 @@
     </ion-item>
     
   </ion-list>
+  -->
 
 </ion-content>
